stop modal from hiding the scrollbar

--- a/src/scss/modules/_base.scss
+++ b/src/scss/modules/_base.scss
@@ -33,3 +33,7 @@ a {
 button {
 	-webkit-app-region: no-drag;
 }
+
+.modal-open {
+    overflow: scroll;
+}
